refactor: [statistics]文案更改

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,7 +6,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta content="telephone=no" name="format-detection">
-  <title>归纳本小学</title>
+  <title>错题归纳本小学数学</title>
   <style>
       html, body, #app {height: 100%;}
   </style>
